2301128:  - Added validator for column selection when viewing a stored query.  - Correct custom column return error.  - Fixed display to show the sql when selecting a stored query.  - Corrected glitch that was not display multiple custom columns but only the first column.  - Corrected bug in the tab closing function that would not display the appropriate info for the selected tab.  - Fixed the spinner visibility when selecting a stored query.

--- a/src/app/components/query-result/query-result.component.css
+++ b/src/app/components/query-result/query-result.component.css
@@ -84,6 +84,7 @@ th.mat-sort-header-sorted {
 .spinner {
   width: 100%;
   height: 100%;
+  z-index: 100;
 }
 
 .loadIcon {
